--- a/bi/MyExpoApp/package.json
+++ b/bi/MyExpoApp/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
+    "tunnel": "expo start --tunnel",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web"
@@ -16,6 +17,7 @@
     "@react-navigation/stack": "^7.4.5",
     "expo": "~53.0.20",
     "expo-asset": "^11.1.7",
+    "expo-blur": "~14.1.5",
     "expo-camera": "~16.1.11",
     "expo-file-system": "~18.1.11",
     "expo-image": "~2.4.0",
