--- a/bi/MyExpoApp/app.json
+++ b/bi/MyExpoApp/app.json
@@ -16,8 +16,10 @@
       "supportsTablet": true,
       "infoPlist": {
         "NSCameraUsageDescription": "This app needs access to camera to take photos.",
-        "NSPhotoLibraryUsageDescription": "This app needs access to photo library to view and organize your photos."
-      }
+        "NSPhotoLibraryUsageDescription": "This app needs access to photo library to view and organize your photos.",
+        "ITSAppUsesNonExemptEncryption": false
+      },
+      "bundleIdentifier": "com.myluvmail.thebible"
     },
     "android": {
       "adaptiveIcon": {
@@ -26,30 +28,28 @@
       },
       "edgeToEdgeEnabled": true,
       "permissions": [
-        "CAMERA",
-        "READ_EXTERNAL_STORAGE",
-        "WRITE_EXTERNAL_STORAGE",
-        "READ_MEDIA_IMAGES"
-      ]
+        "android.permission.READ_EXTERNAL_STORAGE",
+        "android.permission.WRITE_EXTERNAL_STORAGE",
+        "android.permission.READ_MEDIA_IMAGES",
+        "android.permission.RECORD_AUDIO"
+      ],
+      "package": "com.myluvmail.MyExpoApp"
     },
     "web": {
       "favicon": "./assets/favicon.png"
     },
     "plugins": [
       [
-        "expo-image-picker",
-        {
-          "photosPermission": "This app needs access to photo library to select and save photos.",
-          "cameraPermission": "This app needs access to camera to take photos."
-        }
-      ],
-      [
         "expo-media-library",
         {
-          "photosPermission": "This app needs access to photo library to view and organize your photos.",
-          "savePhotosPermission": "This app needs permission to save photos to your device."
+          "photosPermission": "This app needs access to photo library to view and organize your photos."
         }
       ]
-    ]
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "b87c98ba-f47f-43c9-95d9-e116d9ac2ce5"
+      }
+    }
   }
 }
