--- a/bi/MyExpoApp/package.json
+++ b/bi/MyExpoApp/package.json
@@ -18,10 +18,8 @@
     "expo": "~53.0.20",
     "expo-asset": "^11.1.7",
     "expo-blur": "~14.1.5",
-    "expo-camera": "~16.1.11",
     "expo-file-system": "~18.1.11",
     "expo-image": "~2.4.0",
-    "expo-image-picker": "~16.1.4",
     "expo-media-library": "~17.1.7",
     "expo-sharing": "~13.1.5",
     "expo-status-bar": "~2.2.3",
@@ -36,7 +34,9 @@
     "xmldom-qsa": "^1.1.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/react": "~19.0.10",
+    "typescript": "~5.8.3"
   },
   "private": true
 }
